add save case endpoint
